package com.example.gqw.analytics.entity;

public enum AggregationGranularity {
    HOUR,
    DAY,
    MONTH
}

