package com.example.gqw.analytics.entity;

public enum AggregationRunType {
    SCHEDULED,
    MANUAL
}

