package com.example.gqw.analytics.entity;

public enum AggregationStatus {
    SUCCESS,
    FAILED
}

