@startuml
title Диаграмма классов «Агрегация и фоновые задания»

left to right direction
skinparam shadowing false
skinparam classAttributeIconSize 0

package "com.example.gqw.analytics.service" {
  class AggregationScheduler {
    -aggregationService : AggregationService
    -scheduledJobsPolicy : AnalyticsScheduledJobsPolicy
    +runHourly() : void
    +runDaily() : void
    +runMonthly() : void
  }

  class AggregationService {
    -eventRepository : AnalyticsEventRepository
    -stageRepository : AnalyticsStageRepository
    -aggregationRunRepository : AggregationRunRepository
    -aggregatedMetricRepository : AggregatedMetricRepository
    +runAggregation(granularity, periodStart, periodEnd) : void
    +currentPeriodStart(granularity) : Instant
  }

  class AnalyticsTimeRollupService {
    -jdbcTemplate : NamedParameterJdbcTemplate
    -enabled : boolean
    -refreshIntervalMinutes : int
    -overlapMinutes : int
    +isEnabled() : boolean
    +chooseSourceGranularityMinutes(...) : int
    +loadEventAggregatePoints(...) : List<AggregatePoint>
    +loadStageAggregatePoints(...) : List<AggregatePoint>
    +scheduledRefresh() : void
    +initializeIfNeeded() : void
    +seriesFromPoints(...) : List<TimeSeriesPointDto>
  }

  class AnalyticsFilterRollupService {
    -jdbcTemplate : NamedParameterJdbcTemplate
    -enabled : boolean
    -refreshIntervalHours : int
    +initializeIfNeeded() : void
    +refreshRecentNow() : void
    +rebuildAllNow() : void
    +scheduledRefresh() : void
    +shouldUseRollup(...) : boolean
    +findEventTypeCodes(...) : List<String>
    +findAttributeValues(...) : List<String>
  }

  class AnalyticsStageMetricRollupService {
    -jdbcTemplate : NamedParameterJdbcTemplate
    -enabled : boolean
    -refreshIntervalMinutes : int
    -overlapMinutes : int
    +isEnabled() : boolean
    +scheduledRefresh() : void
    +initializeIfNeeded() : void
    +loadMetricSummaries(...) : List<MetricSummaryPoint>
    +loadNumericSeries(...) : List<TimeSeriesPointDto>
    +loadTopValues(...) : List<TopValueDto>
  }

  class AnalyticsDataLifecycleService {
    -jdbcTemplate : NamedParameterJdbcTemplate
    -runtimeSettingsService : AnalyticsRuntimeSettingsService
    -scheduledJobsPolicy : AnalyticsScheduledJobsPolicy
    +scheduledMaintenance() : void
    +runMaintenanceNow() : void
  }

  class AnalyticsScheduledJobsPolicy {
    -enabled : boolean
    +isEnabled() : boolean
  }

  class AnalyticsSeriesTime {
    +displayTimeForBucket(bucketStart, to, stepSeconds) : Instant
  }

  class AnalyticsTimeRollupLifecycle {
    -rollupService : AnalyticsTimeRollupService
    +onApplicationReady() : void
  }
  class AnalyticsFilterRollupLifecycle {
    -rollupService : AnalyticsFilterRollupService
    +onApplicationReady() : void
  }
  class AnalyticsStageMetricRollupLifecycle {
    -rollupService : AnalyticsStageMetricRollupService
    +onApplicationReady() : void
  }
}

package "com.example.gqw.analytics.entity" {
  class AggregatedMetric {
    -id : Long
    -aggregationRunId : Long
    -eventTypeCode : String
    -stageTypeCode : String
    -sampleCount : Long
    -avgMs : BigDecimal
    -p95Ms : BigDecimal
    -p99Ms : BigDecimal
  }
  class AggregationRun {
    -id : Long
    -runType : AggregationRunType
    -granularity : AggregationGranularity
    -status : AggregationStatus
    -periodStart : Instant
    -periodEnd : Instant
    +prePersist() : void
  }
  enum AggregationGranularity
  enum AggregationRunType
  enum AggregationStatus
}

package "com.example.gqw.analytics.repository" {
  interface AggregatedMetricRepository {
    +deleteByPeriod(...) : int
    +findByFilter(...) : List<AggregatedMetric>
  }
  interface AggregationRunRepository {
    +findTopByGranularityAndStatusOrderByPeriodEndDesc(...) : Optional<AggregationRun>
  }
}

AggregationScheduler --> AnalyticsScheduledJobsPolicy
AggregationScheduler --> AggregationService
AggregationScheduler --> AnalyticsTimeRollupService
AggregationScheduler --> AnalyticsStageMetricRollupService
AggregationScheduler --> AnalyticsFilterRollupService
AnalyticsTimeRollupLifecycle --> AnalyticsTimeRollupService
AnalyticsFilterRollupLifecycle --> AnalyticsFilterRollupService
AnalyticsStageMetricRollupLifecycle --> AnalyticsStageMetricRollupService
AnalyticsDataLifecycleService --> AnalyticsTimeRollupService
AnalyticsDataLifecycleService --> AnalyticsStageMetricRollupService
AggregationService --> AggregationRunRepository
AggregationService --> AggregatedMetricRepository
AggregationRunRepository --> AggregationRun
AggregatedMetricRepository --> AggregatedMetric
AggregationRun --> AggregationGranularity
AggregationRun --> AggregationRunType
AggregationRun --> AggregationStatus
AnalyticsTimeRollupService --> AnalyticsSeriesTime
@enduml
